--- a/14-blog-design/14-blog-design.html
+++ b/14-blog-design/14-blog-design.html
@@ -4,23 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>
-      <nav>
-        <h1><a href="" Lost in Madagascar
-      </nav>
+     Blog
     </title>
   </head>
   <body>
     <header>
       <h1>
-
+        <a href="/">Lost_in_Madagascar</a>
       </h1>
+      <nav>
+        <ul>
+          <li>
+            <h2>
+              <a href="/lost_in_madagascar">HOME</a>
+            </h2>
+          </li>
+          <li>
+            <h2>
+              <a href="/about">ABOUT</a>
+            </h2>
+          </li>
+          <li>
+            <h2>
+              <a href="/sample_post">SAMPLE POST</a>
+            </h2>
+          </li>
+          <li>
+            <h2>
+              <a href="/contact">CONTACT</a>
+            </h2>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <a href="blog_design.png">
-      </a>
-    </main>
-    <footer>
+      <h1>
+        <a href="/">Lost</a>
+      </h1>
+      <section>
+        <h2>
+          Journals of a tourist lost in Madagascar
+        </h2>
+      </section>
 
+      <hr>
+
+      <section>
+        <h3>
+          <a href="/sample_post">
+            Man must expore, and this is
+            exploration at its greatest
+          </a>
+        </h3>
+        <h4>
+          Problemes look mighty small from 150 miles up
+        </h4>
+        <sub>
+          Posted by <a href="/jesse">jesse</a> on September 24, 2019
+        </sub>
+      </section>
+
+      <hr>
+
+      <section>
+        <h3>
+          <a href="/sample_post">
+            I belive every human has a finite
+            number of hearbeats. Idon't intend to
+            waste any of mine.
+          </a>
+        </h3>
+        <sub>
+          Posted by <a href="/jesse_me">Jesse</a> on September 18, 2019
+        </sub>
+        <h3>
+          <a href="/blog">Older posts</a>
+        </h3>
+    </section>
+    </main>
+
+    <hr>
+
+    <footer>
+      <h3>
+        <a href="https://twitter.com">twiter</a>
+        <a href="https://facebook.com">facebook</a>
+        <a href="https://github.com">github</a>
+      </h3>
+      <sub>
+        Copyright  Your Website 2019
+      </sub>
     </footer>
   </body>
 </html>
